# xbim

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Rocket.toml  SECURITY.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: check.yml  ci_cd.yml  enforce_branch.yml
app/: Cargo.toml  index.html
app/assets/: sw.js
app/src/: app.rs  main.rs  style.rs  utils.rs
app/src/widgets/: card.rs
backend/: Cargo.toml  Rocket.toml
backend/src/: database.rs  main.rs  schemas.rs  utils.rs
backend/src/api/: database.rs  github.rs  local_storage.rs  schema.rs  user.rs  users.rs
backend/src/models/: user.rs  users.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/assets/: manifest.json  sw.js
frontend/src/: app.rs  main.rs  utils.rs
frontend/src/modules/: auth.rs  pages.rs
scripts/: gen_certs_for_dev.sh  gen_certs_for_dev_LINUX.sh  gen_certs_for_dev_WINDOWS.ps1
server/: Cargo.toml
server/src/: config.rs  database.rs  errors.rs  main.rs
server/src/guards/: auth.rs  ratelimit.rs
server/src/models/: user.rs
server/src/routes/: data.rs  github.rs  health.rs
src/: config.rs  constants.rs  database.rs  errors.rs  main.rs  tls.rs  utils.rs
src/api/: auth.rs  dashboard.rs  database.rs  flutter_service_worker.rs  github.rs  health.rs  index.rs
src/fairings/: compression.rs  filtering.rs  id.rs  limiting.rs  logging.rs  security.rs
src/guards/: auth.rs  authentication.rs  id.rs  identification.rs  ratelimit.rs
src/middleware/: csrf.rs
src/middlewares/: auth.rs  authentication.rs  compression.rs  filtering.rs  identification.rs  logger.rs  logging.rs  security.rs
src/models/: card.rs  user.rs
src/routes/: data.rs  github.rs  health.rs  ifc.rs  index.rs
src/schemas/: bim.rs  ifc.rs
src/templates/: index.hbs  index.html.tera
xbim/: Cargo.toml
xbim/src/: main.rs
xcad/: Cargo.toml  index.html
xcad/assets/: manifest.json  sw.js
xcad/src/: app.rs  utils.rs
xcad/src/modules/: auth.rs  pages.rs
