[package]
name = "xBIM"
version = "1.0.0"
edition = "2021"
include = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE.md",
    "README.md",
    "**/*.rs",
    "Cargo.toml",
]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
flate2 = "1.1.0"
ifc_rs = "0.1.0-alpha.9"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.1.4", features = ["http"] }
toml = "0.8.20"
