[package]
name = "xBIM"
version = "1.2.0"
edition = "2021"
include = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE.md",
    "README.md",
    "**/*.rs",
    "Cargo.toml",
]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
chrono = "0.4.40"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_async_compression = "0.6.1"
rocket_cors = "0.6.0"
rocket-governor = "0.2.0-rc.4"
surrealdb = { version = "2.2.1", features = ["http"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"