[package]
name = "xBIM_App"
version = "1.3.0"
edition = "2024"
include = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE.md",
    "README.md",
    "**/*.rs",
    "Cargo.toml",
]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["accesskit"] }
log = "0.4.27"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"