[package]
name = "backend"
version = "1.0.0"
edition = "2021"
include = ["LICENSE.md", "**/*.rs", "Cargo.toml"]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
diesel = { version = "2.2.6", features = ["r2d2", "postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.217"