[package]
name = "backend"
version = "1.0.0"
edition = "2021"
include = ["LICENSE.md", "**/*.rs", "Cargo.toml"]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_oauth2 = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
web-sys = { version = "0.3.76", features = ["Storage", "Window"] }
thiserror = "2.0.10"
lazy = "0.5.3"
