[package]
name = "frontend"
version = "1.0.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["console"] }
gloo = "0.11.0"
wasm-bindgen-futures = "0.4.49"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"