[package]
name = "xbim"
version = "1.0.0"
edition = "2021"
include = ["LICENSE.md", "**/*.rs", "Cargo.toml"]
authors = ["XodiumSoftware <https://xodium.org/>"]
description = "All-in solution to BIM models, written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/XodiumSoftware/xBIM"
homepage = "https://xodium.org/"
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
